--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Пинк</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
+    <title>Pink</title>
+    <link rel="stylesheet" href="css/style.min.css">
+</head>
+<body>
+    <div class="page">
+        <header class="page__header">
+            <!-- Далее здесь разметим шапку сайта -->
+            <div class="page-header__wrapper">
+        <a class="logo" href="index.html">
+        </a>
+        <input class="menu-mobail" id="menu-mobail" type="checkbox">
+        <label for="menu-mobail" class="burger"></label>
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурсы</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
+      </div>  
+        </header>
+        <main class="page__content">
+            <!-- здесь разметим контент -->
+        </main>
+        <footer class="page__footer">
+            <!-- здесь разметим футер сайта -->
+        </footer>
+    </div>
+</body>
 </html>
