--- a/index.html
+++ b/index.html
@@ -1,37 +1,143 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
-    <title>Pink</title>
-    <link rel="stylesheet" href="css/style.min.css">
+	<meta charset="UTF-8">
+	<meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
+	<title>Pink</title>
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="page">
-        <header class="page__header">
-            <!-- Далее здесь разметим шапку сайта -->
-            <div class="page-header__wrapper">
-        <a class="logo" href="index.html">
-        </a>
-        <input class="menu-mobail" id="menu-mobail" type="checkbox">
-        <label for="menu-mobail" class="burger"></label>
-        <nav class="main-nav">
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурсы</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
-            </li>
-          </ul>
-        </nav>
-      </div>  
-        </header>
-        <main class="page__content">
-            <!-- здесь разметим контент -->
-        </main>
-        <footer class="page__footer">
-            <!-- здесь разметим футер сайта -->
-        </footer>
-    </div>
+	<div class="page">
+		<header class="page__header">
+			<div class="section  header-section">
+				<div class="section__inner  header-section__inner">
+					<a class="header-logo" href="#">Pink</a>
+					<nav class="main-nav">
+						<div class="main-nav__burger"></div>
+						<ul class="main-nav__list">
+							<li class="main-nav__item"><a class="main-nav__link  main-nav__link--active" href="index.html">Главная</a></li>
+							<li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
+							<li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурсы</a></li>
+							<li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<main class="page__content">
+			<div class="section  content-section">
+				<section class="download-app">
+					<div class="download-app__wrapper">
+						<a class="btn btn--download" href="#">Скачать приложение</a>
+						<div class="download-app__platforms">
+							<a class="platform platform--apple" href="#"></a>
+							<a class="platform platform--android" href="#"></a>
+							<a class="platform platform--windows" href="#"></a>
+						</div>
+						<p class="download-app__info">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+					</div>
+				</section>
+				<section class="features">
+					<div class="features__title">
+						<div class="wrapper">
+							<h1 class="features__heading">Устали от серости мегаполиса?</h1>
+							<h1 class="features__heading">Нам есть, что вам предложить!</h1>
+						</div>
+					</div>
+				</section>
+				<section class="features-items">
+					<div class="features-items__wrapper">
+						<div class="features-item">
+							<h2 class="features-item__title">Поднимает настроение</h2>
+							<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов</p>
+						</div>
+						<div class="features-item">
+							<h2 class="features-item__title">Меняет мир вокруг</h2>
+							<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+						</div>
+						<div class="features-item">
+							<div class="features-item__picture">
+							<img src="<img src="http://placehold.it/150x100" width="150" height="100" alt="телефон мобильный">
+							</div>
+							<h2 class="features-item__title">Заводит новых друзей</h2>
+							<p class="features-item__text">Ставьте лайки,комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+						</div>
+					</div>
+				</section>
+				<section class="reviews">
+					<div class="reviews__wrapper">
+						<div class="carousel">
+							<div class="carousel__inner">
+								<input class="hide-input" type="radio" id="btn-carousel-1" name="carousel" checked="checked">
+								<article class="reviews-item">
+									<h2 class="reviews-item__title">Николай Петров</h2>
+										<p class="reviews-item__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+								</article>
+								<input class="hide-input" type="radio" id="btn-carousel-2" name="carousel">
+								<article class="reviews-item">
+									<h2 class="reviews-item__title">Николай Иванов</h2>
+										<p class="reviews-item__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
+								</article>
+								<input class="hide-input" type="radio" id="btn-carousel-3" name="carousel">
+								<article class="reviews-item">
+									<h2 class="reviews-item__title">Николай Сидоров</h2>
+									<p class="reviews-item__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной  фотографии!"</p>
+								</article>
+								<div class="slider-controls">
+									<label for="btn-carousel-1"></label>
+									<label for="btn-carousel-2"></label>
+									<label for="btn-carousel-3"></label>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="prais">
+					<div class="prais__wrapper">
+						<input class="hide-input" type="radio" id="btn-prais-1" name="slaider-prais">
+						<input class="hide-input" type="radio" id="btn-prais-2" name="slaider-prais">
+						<input class="hide-input" type="radio" id="btn-prais-3" name="slaider-prais">
+					<table class="slider-price__table">
+						<tr>
+							<th><strong>База</strong> 1,99 USD</th>
+							<th class="hit"><strong>Стандарт</strong> 3,99 USD</th>
+							<th><strong>Анлим</strong> 9,99 USD</th>
+						</tr>
+						<tr>
+							<td class="check-on">Розовый фильтр</td>
+							<td class="check-on">Розовый фильтр</td>
+							<td class="check-on">Розовый фильтр</td>
+						</tr>
+							<td class="check-off">Смайлики</td>
+							<td class="check-on">Смайлики</td>
+							<td class="check-on">Смайлики</td>
+						</tr>
+						<tr>
+							<td class="check-off">Коментарии</td>
+							<td class="check-off">Коментарии</td>
+							<td class="check-on">Коментарии</td>
+						</tr>
+					</table>
+
+					<div class="slider-controls">
+						<label for="btn-preice-1"></label>
+						<label for="btn-preice-2"></label>
+						<label for="btn-preice-3"></label>
+					</div>
+
+					</div>
+				</section>
+			</div>
+		</main>
+		<footer class="page__footer">
+			<div class="section-footer section-footer--gradient">
+				<div class="index-title">Остались вопросы? Свяжитесь с нами!</div>
+				<div class="index-footer__item-title">Звоните:</div><div class="index-footer__item">+7 (812) 555-66-66</div>
+				<div class="index-footer__item-title">Пишите:</div><div class="index-footer__item">mail@htmlacademy.ru</div>
+				<div class="index-footer__item-title">Приезжайте в гости:</div><div class="index-footer__item">ул. Большая Конюшенная, 19/8</div>
+			<div class="section-footer__map">
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
