правка слайдер на главной

--- a/index.html
+++ b/index.html
@@ -65,35 +65,32 @@
 					</div>
 				</section>
 				<section class="reviews">
-					<div class="reviews__wrapper">
-						<div class="carousel">
-							<div class="carousel__inner">
-								<input class="hide-input" type="radio" id="btn-carousel-1" name="carousel" checked="checked">
-								<article class="reviews-item">
-									<h2 class="reviews-item__title">Николай Петров</h2>
-										<p class="reviews-item__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
-								</article>
-								<input class="hide-input" type="radio" id="btn-carousel-2" name="carousel">
-								<article class="reviews-item">
-									<h2 class="reviews-item__title">Николай Иванов</h2>
-										<p class="reviews-item__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</p>
-								</article>
-								<input class="hide-input" type="radio" id="btn-carousel-3" name="carousel">
-								<article class="reviews-item">
-									<h2 class="reviews-item__title">Николай Сидоров</h2>
-									<p class="reviews-item__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной  фотографии!"</p>
-								</article>
-								<div class="slider-controls">
-									<label for="btn-carousel-1"></label>
-									<label for="btn-carousel-2"></label>
-									<label for="btn-carousel-3"></label>
-								</div>
-							</div>
-						</div>
+					<div class="reviews__wrapper slider">
+						<input class="slider__input" type="radio" name="advantages" id="btn-carousel-1" checked>
+						<input class="slider__input" type="radio" name="advantages" id="btn-carousel-2">
+						<input class="slider__input" type="radio" name="advantages" id="btn-carousel-3">
+					<ul class="reviews__items">
+					<li class="reviews__item  reviews__item--fast  slider__item">
+					<h2 class="areviews__item-title">Николай Петров</h2>
+						<p>Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+					</li>
+					<li class="reviews__item  reviews__item--fast  slider__item">
+						<h2 class="reviews__item-title">Николай Иванов</h2>
+						<p>Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+					</li>
+					<li class="reviews__item  reviews__item--fast  slider__item">
+					<h2 class="reviews__item-title">Николай Иванов</h2>
+					<p>Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные cерые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+					</li>
+					<div class="advantages__toggles  slider__toggles">
+						<label for="btn-carousel-1"></label>
+						<label for="btn-carousel-2"></label>
+						<label for="btn-carousel-3"></label>
+					</div>
 					</div>
 				</section>
 				<section class="prais">
-					<div class="prais__wrapper">
+					<div class="prais__wrapper slider">
 						<input class="hide-input" type="radio" id="btn-prais-1" name="slaider-prais">
 						<input class="hide-input" type="radio" id="btn-prais-2" name="slaider-prais">
 						<input class="hide-input" type="radio" id="btn-prais-3" name="slaider-prais">
