--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
 	<title>Pink</title>
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="page">
@@ -26,6 +26,10 @@
 		</header>
 		<main class="page__content">
 			<div class="section  content-section">
+				<section class="page-title page-title--index">
+					<div class="page-title__wrapper page-title__wrapper--index">
+					</div>
+				</section>
 				<section class="download-app">
 					<div class="download-app__wrapper">
 						<a class="btn btn--download" href="#">Скачать приложение</a>
@@ -115,7 +119,6 @@
 							<td class="check-on">Коментарии</td>
 						</tr>
 					</table>
-
 					<div class="slider-controls">
 						<label for="btn-preice-1"></label>
 						<label for="btn-preice-2"></label>
