--- a/photo.html
+++ b/photo.html
@@ -42,35 +42,38 @@
 					</div>
 				</div>
 			</div>
-			<div class="section">
-				<div class="section__inner">
-					<article class="foto foto__top">
-						<picture>картинка</picture>
-						 <div class="photo__description">
-							<div class="foto__name">Анна</div>
-							<div class="foto__taim">(5 минут назад)</div>
-							<div class="foto__text">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</div>
-							<div class="foto__foter">нравится:215</div>
+			<div class="section  photo-list-section">
+				<div class="section__inner  photo-list-section__inner">
+					<article class="photo-item  photo-item--top">
+						<picture class="photo-item__img  photo-item__img--top">картинка</picture>
+						<div class="photo-item__description">
+							<div class="photo-item__name">Анна</div>
+							<div class="photo-item__time">(5 минут назад)</div>
+							<div class="photo-item__text">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</div>
+							<div class="photo-item__foter">
+								<div class="likes">
+									<button class="likes__button likes__button--active">like</button>
+									<span class="likes__scores likes__button--active">нравится:215</span>
+								</div>
+							</div>
+						</div>
+					</article>
+					<article class="photo-item">
+						<picture class="photo-item__img">картинка</picture>
+						<div class="photo-item__description">
+							<div class="photo-item__name">Левон</div>
+							<div class="photo-item__time">(5 часов назад)</div>
+							<div class="photo-item__text">Вчера он на луну летал, сегодня в руки к нам попал.</div>
+							<div class="photo-item__foter">
+								<div class="likes">
+									<button class="likes__button likes__button--active">like</button>
+									<span class="likes__scores likes__button--active">нравится:356</span>
+								</div>
+							</div>
 						</div>
 					</article>
 				</div>
 			</div>
-			<div class="section">
-				<div class="section__inner">
-					<article class="foto foto">
-						<picture>картинка</picture>
-						 <div class="photo__description">
-							<div class="foto__name">\Левон</div>
-							<div class="foto__taim">(5 часов назад)</div>
-							<div class="foto__text">Вчера он на луну летал, сегодня в руки к нам попал.</div>
-							<div class="foto__foter">нравится:356</div>
-						</div>
-					</article>
-				</div>
-			</div>
-		</main>
-
-
 		<footer class="page__footer">
 			<div class="section  footer-section">
 				<div class="section__inner  footer-section__inner">
