--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<ul class="main-nav__list">
 							<li class="main-nav__item"><a class="main-nav__link  main-nav__link--active" href="index.html">Главная</a></li>
 							<li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
-							<li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурсы</a></li>
+							<li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурс</a></li>
 							<li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a></li>
 						</ul>
 					</nav>
