--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
-	<link href='https ://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<title>Pink</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +13,7 @@
 				<div class="section__inner  header-section__inner">
 					<a class="header-logo" href="#">Pink</a>
 					<nav class="main-nav">
-						<div class="main-nav__burger"></div>
+						<div class="main-nav__burger  main-nav__burger--cross"></div>
 						<ul class="main-nav__list">
 							<li class="main-nav__item"><a class="main-nav__link  main-nav__link--active" href="index.html">Главная</a></li>
 							<li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
