--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 				<div class="section__inner  header-section__inner">
 					<a class="header-logo" href="index.html">Pink</a>
 					<nav class="main-nav">
-						<div class="main-nav__burger"></div>
+						<div class="main-nav__burger  main-nav__burger--cross"></div>
 						<ul class="main-nav__list">
 							<li class="main-nav__item"><a class="main-nav__link  main-nav__link--active" href="index.html">Главная</a></li>
 							<li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
