--- a/photo.html
+++ b/photo.html
@@ -45,11 +45,9 @@
 				<div class="section__inner  photo-list-section__inner">
 					<article class="photo-item  photo-item--top">
 						<picture class="photo-item__img  photo-item__img--top">
-							<picture class="photo-item__img">
-								<source media="(min-width: 990px)" srcset="img/panorama-desktop@1x.jpg">
-								<source media="(min-width: 690px)" srcset="img/panorama-tablet@1x.jpg">
-								<img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@1x.jpg 1x img/panorama-mobile@2x.jpg 2x" alt="photo">
-							</picture>
+							<source media="(min-width: 990px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+							<source media="(min-width: 690px)" srcset="img/panorama-tablet@1x.jpg">
+							<img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@1x.jpg 1x, img/panorama-mobile@2x.jpg 2x" alt="photo">
 						</picture>
 						<div class="photo-item__description">
 							<div class="photo-item__name">Анна</div>
@@ -67,7 +65,7 @@
 
 					<article class="photo-item">
 						<picture class="photo-item__img">
-							<source media="(min-width: 990px)" srcset="img/photo-1-desktop@1x.jpg">
+							<source media="(min-width: 990px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
 							<source media="(min-width: 690px)" srcset="img/photo-1-tablet@1x.jpg">
 							<img src="img/photo-1-mobile@1x.jpg" srcset="img/photo-1-mobile@1x.jpg 1x img/photo-1-mobile@2x.jpg 2x" alt="photo">
 						</picture>
