--- a/photo.html
+++ b/photo.html
@@ -47,11 +47,13 @@
 						<picture class="photo-item__img  photo-item__img--top">
 							<source media="(min-width: 990px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
 							<source media="(min-width: 690px)" srcset="img/panorama-tablet@1x.jpg">
-							<img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@1x.jpg 1x, img/panorama-mobile@2x.jpg 2x" alt="photo">
-						</picture>
+							<img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@1x.jpg 1x, img/panorama-mobile@2x.jpg 2x" class="photo__item photo__item--top" alt="photo">
+						</picture> 
 						<div class="photo-item__description">
-							<div class="photo-item__name">Анна</div>
-							<div class="photo-item__time">(5 минут назад)</div>
+							<div class="photo-header">
+								<div class="photo-item__name"><b>Анна </b></div>
+								<div class="photo-item__time">(5 минут назад)</div>
+							</div>
 							<div class="photo-item__text">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</div>
 							<div class="photo-item__foter">
 								<div class="likes">
